--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,17 @@
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
+    <repositories>
+        <repository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>http://repo.e-iceblue.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,6 +64,15 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId> e-iceblue </groupId>
+            <artifactId>spire.doc.free</artifactId>
+            <scope>system</scope>
+            <systemPath>${basedir}/libs/spire.doc.free-2.7.3.jar</systemPath>
+        </dependency>
+
+
     </dependencies>
 
     <build>
